<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2013 Mark Injerd

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<RelativeLayout
		android:id="@+id/RL_Angle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="20dp">
		<TextView
			android:id="@+id/textAngle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/angle"
			android:textSize="20sp"/>
		<TextView
			android:id="@+id/text2Angle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/textAngle"
			android:text="@string/angle_desc"
			android:textSize="12sp"/>
		<EditText
			android:id="@+id/editAngle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:inputType="numberDecimal"
			android:minEms="4"/>
	</RelativeLayout>
	<RelativeLayout
		android:id="@+id/RL_Velocity"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="20dp">
		<TextView
			android:id="@+id/textVelocity"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/velocity"
			android:textSize="20sp"/>
		<TextView
			android:id="@+id/text2Velocity"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/textVelocity"
			android:text="@string/velocity_desc"
			android:textSize="12sp"/>
		<EditText
			android:id="@+id/editVelocity"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:inputType="numberDecimal"
			android:minEms="4"/>
	</RelativeLayout>
	<RelativeLayout
		android:id="@+id/RL_Fuze"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="20dp">
		<TextView
			android:id="@+id/textFuze"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/fuze"
			android:textSize="20sp"/>
		<TextView
			android:id="@+id/text2Fuze"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/textFuze"
			android:text="@string/fuze_desc"
			android:textSize="12sp"/>
		<EditText
			android:id="@+id/editFuze"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:inputType="numberDecimal"
			android:minEms="4"/>
	</RelativeLayout>
	<RelativeLayout
		android:id="@+id/RL_Gravity"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="20dp">
		<TextView
			android:id="@+id/textGravity"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/gravity"
			android:textSize="20sp"/>
		<TextView
			android:id="@+id/text2Gravity"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/textGravity"
			android:text="@string/gravity_desc"
			android:textSize="12sp"/>
		<EditText
			android:id="@+id/editGravity"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:inputType="numberSigned|numberDecimal"
			android:minEms="4"/>
	</RelativeLayout>
	<RelativeLayout
		android:id="@+id/RL_Wind"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="20dp">
		<TextView
			android:id="@+id/textWind"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/wind"
			android:textSize="20sp"/>
		<TextView
			android:id="@+id/text2Wind"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/textWind"
			android:text="@string/wind_desc"
			android:textSize="12sp"/>
		<EditText
			android:id="@+id/editWind"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:inputType="numberSigned|numberDecimal"
			android:minEms="4"/>
	</RelativeLayout>
	<RelativeLayout
		android:id="@+id/RL_TargetD"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="20dp">
		<TextView
			android:id="@+id/textTargetD"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/target_distance"
			android:textSize="20sp"/>
		<TextView
			android:id="@+id/text2TargetD"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/textTargetD"
			android:text="@string/target_distance_desc"
			android:textSize="12sp"/>
		<EditText
			android:id="@+id/editTargetD"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:inputType="number"
			android:minEms="4"/>
	</RelativeLayout>
	<RelativeLayout
		android:id="@+id/RL_TargetH"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="20dp">
		<TextView
			android:id="@+id/textTargetH"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/target_height"
			android:textSize="20sp"/>
		<TextView
			android:id="@+id/text2TargetH"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/textTargetH"
			android:text="@string/target_height_desc"
			android:textSize="12sp"/>
		<EditText
			android:id="@+id/editTargetH"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:inputType="number"
			android:minEms="4"/>
	</RelativeLayout>
	<RelativeLayout
		android:id="@+id/RL_TargetS"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="20dp">
		<TextView
			android:id="@+id/textTargetS"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/target_radius"
			android:textSize="20sp"/>
		<TextView
			android:id="@+id/text2TargetS"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/textTargetS"
			android:text="@string/target_radius_desc"
			android:textSize="12sp"/>
		<EditText
			android:id="@+id/editTargetS"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:inputType="number"
			android:minEms="4"/>
	</RelativeLayout>
	<RelativeLayout
		android:id="@+id/RL_ProjS"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="20dp">
		<TextView
			android:id="@+id/textProjS"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/projectile_radius"
			android:textSize="20sp"/>
		<TextView
			android:id="@+id/text2ProjS"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/textProjS"
			android:text="@string/projectile_radius_desc"
			android:textSize="12sp"/>
		<EditText
			android:id="@+id/editProjS"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:inputType="number"
			android:minEms="4"/>
	</RelativeLayout>
</LinearLayout>
